Fix overflow

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -2032,7 +2032,7 @@ legend
 	line-height 16px
 	margin 0 auto
 .mobile body.home
-	overflow hidden
+	/*overflow hidden*/
 	overflow-x hidden
 .mobile body
 	background #000
